fix: AlertController에서 DTO 사용하여 Lazy Loading 문제 해결
- 모든 GET/PATCH 메서드에서 AlertResponse DTO 반환
- Alert 엔티티 직접 반환 제거 (Lazy Loading 직렬화 오류 해결)
- AlertResponse.from() 정적 메서드로 변환
- keyword null 체크 추가 (NullPointerException 방지)
- Stream API로 Entity → DTO 변환 처리

수정된 API:
- GET /api/alerts - 전체 알림 조회
- GET /api/alerts/{id} - 특정 알림 조회
- GET /api/alerts/unsent - 미전송 알림 조회
- GET /api/alerts/sent - 전송 완료 알림 조회
- GET /api/alerts/site/{siteId} - 사이트별 알림 조회
- GET /api/alerts/keyword/{keywordId} - 키워드별 알림 조회
- GET /api/alerts/period - 기간별 알림 조회
- PATCH /api/alerts/{id}/mark-sent - 알림 읽음 처리

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>